--- a/js/app3/js/bootstrap.min4.css
+++ b/js/app3/js/bootstrap.min4.css
@@ -6,7 +6,7 @@
  */
 
 :root {
-    --blue: #28a745;
+    --blue: #007bff;
     --indigo: #6610f2;
     --purple: #6f42c1;
     --pink: #e83e8c;
@@ -2105,7 +2105,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 select.form-control:focus::-ms-value {
-    color: #28a745;
+    color: #495057;
     background-color: #fff
 }
 
@@ -2261,7 +2261,7 @@ select.form-control:focus::-ms-value {
 }
 
 .custom-select.is-valid, .form-control.is-valid, .was-validated .custom-select:valid, .was-validated .form-control:valid {
-    border-color: #28a745;
+    border-color: #28a745
 }
 
     .custom-select.is-valid:focus, .form-control.is-valid:focus, .was-validated .custom-select:valid:focus, .was-validated .form-control:valid:focus {
@@ -2345,7 +2345,7 @@ select.form-control:focus::-ms-value {
 }
 
     .custom-select.is-invalid:focus, .form-control.is-invalid:focus, .was-validated .custom-select:invalid:focus, .was-validated .form-control:invalid:focus {
-        border: 4px #dc3545 solid;
+        border-color: #dc3545;
         box-shadow: 0 0 0 .2rem rgba(220,53,69,.25)
     }
 
@@ -3599,7 +3599,7 @@ tbody.collapse.show {
         -moz-user-select: none;
         -ms-user-select: none;
         user-select: none;
-        background-color: #28a745
+        background-color: #dee2e6
     }
 
     .custom-control-label::after {
