--- a/js/app3/js/editor_index_style.css
+++ b/js/app3/js/editor_index_style.css
@@ -1,8 +1,5 @@
 
 
-.TABM .nav-item a {
-    border-radius: 0px;
-}
 
 
 
@@ -21,13 +18,6 @@ display:table;
       
 }
 
-
- #foter{
-  height: 40px;
-}
-#titl{
-  padding-top: 6px;
-}
 
 content{
   width: 100%;
@@ -209,15 +199,16 @@ overflow-x: hidden;
 }
 
 
-#foter {
+#foter{
     left: 0;
     bottom: 0;
     width: 100%;
     color: #333;
     background-color: white;
     text-align: left;
-    height: 39px;
+    height: 55px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.50);
+  
 }
 
 #foter #titl{
@@ -244,7 +235,7 @@ overflow-x: hidden;
         color: #bf9b30;
     }
 #hexas path {
-  fill: rgba(191, 155, 48, 0.86);
+  fill: #556c82;
 }
 
 #circles .bg {
@@ -595,19 +586,19 @@ overflow-x: hidden;
   color:#bf9b30;
 }
 #hexas path {
-    fill: rgba(191, 155, 48, 0.86);
+  fill: #556c82;
 }
 
 #circles .bg {
-  stroke: rgba(191, 155, 48, 0.40);
+  stroke: #e3e4dc;
 }
 #circles .slow {
-    stroke: rgba(191, 155, 48, 0.70);
-    animation: slowdash 3s linear infinite, rotate 3s linear infinite;
-    transform-origin: 50% 50%;
+  stroke: #98938f;
+  animation: slowdash 3s linear infinite, rotate 3s linear infinite;
+  transform-origin: 50% 50%;
 }
 #circles .fast {
-  stroke: #bf9b30;
+  stroke: #cac3bf;
   animation: fastdash 3s linear infinite, rotate 3s linear infinite;
   transform-origin: 50% 50%;
 }
